--- a/src/css/trendImageViewer.css
+++ b/src/css/trendImageViewer.css
@@ -55,3 +55,7 @@ text.mono {
     height:100%;
     fill:white;
 }
+
+.proteinFamilyRow {
+    padding-top: 10px;
+}
